GNOME Bugzilla – Bug 796245
Fanboy Annoyance list breaks 2 pages without ads
Last modified: 2018-05-28 13:43:52 UTC
Created attachment 372199 [details] Posten.no "broken" 2 different pages gets "broken" when having Fanboy Annoyance list active in adblock. posten.no and yr.no Please see attached screenshots. Removing Fanboy Annoyance list, but keeping the other 2 default block lists makes the pages render as intended.
Created attachment 372200 [details] Posten.no ok
Created attachment 372201 [details] Yr.no - twitter insert broken
Created attachment 372202 [details] yr.no twitter insert ok
(In reply to Bjørn Lie from comment #0) > Removing Fanboy Annoyance list, but keeping the other 2 default block lists > makes the pages render as intended. It's also breaking a webpage on my bank's website. Should probably just remove this list.
(In reply to Michael Catanzaro from comment #4) > It's also breaking a webpage on my bank's website. Should probably just > remove this list. Also breaks https://bugs.webkit.org/show_bug.cgi?id=185504 So we're up to four broken webpages discovered in recent days. Who knows what else it's breaking. Time to go.
(In reply to Michael Catanzaro from comment #5) > Who knows what else it's breaking. Picture slideshows on a local news site... I'm really amazed how many websites this fixes. Guess I need to be more cautious with adblock filters in the future.
Fixed for new users. I need to write a migrator to fix this up for existing users.
(In reply to Michael Catanzaro from comment #7) > Fixed for new users. I need to write a migrator to fix this up for existing > users. Done. Dunno why git-bz decided not to post the patches here. They're in git....
This list was somehow breaking Facebook 1st party share buttons, which it never does in other browsers. I think I mentioned this in another bug report. That means something about Web's ad blocker is interpreting adblock plus rules differently than other browsers and this list was simply more destructive when loaded into Web than breaking parts of Facebook. :/
Not surprising. Like I said on IRC, most problems with adblock are Epiphany's fault, we've never actually had a problem with a list before this bug. E.g. whitelisting is not implemented, so if the share buttons are blacklisted except whitelisted on facebook.com, that would not work. (But that can't be the cause of most of the problems on these sites: something else must have been wrong.) The proper solution is to move to WebKit's content blocking, but that requires more work (starting with exposing WebKit API to make it usable).