Add migrator to remove annoyance filters

https://bugzilla.gnome.org/show_bug.cgi?id=796245